<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item android:title="@string/txt_drawer_nav_category_general">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_drawer_home"
                    android:icon="@drawable/ic_drawer_nav_compass"
                    android:title="@string/txt_destinations" />
            </group>
        </menu>
    </item>
    <item android:title="@string/txt_drawer_nav_category_account">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_drawer_favourites"
                    android:icon="@drawable/ic_drawer_nav_heart"
                    android:title="@string/txt_drawer_nav_favourites" />
                <item
                    android:id="@+id/nav_drawer_profile"
                    android:icon="@drawable/ic_drawer_nav_user"
                    android:title="@string/txt_drawer_nav_profile" />
            </group>
        </menu>
    </item>
    <item android:title="@string/txt_drawer_nav_category_other">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_drawer_settings"
                    android:icon="@drawable/ic_drawer_nav_settings_linear"
                    android:title="@string/txt_drawer_nav_settings" />
                <item
                    android:id="@+id/nav_drawer_exit"
                    android:icon="@drawable/ic_drawer_nav_exit"
                    android:title="@string/txt_drawer_nav_exit" />
            </group>
        </menu>
    </item>
</menu>
